<resources>
    <string name="app_name">MagnitRailStation</string>

    <!--Others strings-->
    <string name="rail_station">Rail Station</string>
    <string name="from">Откуда</string>
    <string name="departure_station">Станция отправления</string>
    <string name="to">Куда</string>
    <string name="arrival_station">Станция прибытия</string>
    <string name="travel_date">Дата поездки</string>
    <string name="date_sample">01.01.2018</string>
    <string name="find_tickets">Найти билеты</string>
    <string name="stations_list">Список станций</string>
    <string name="appVersion">RailWayStation version</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country">Страна:</string>
    <string name="district">Район:</string>
    <string name="city">Город:</string>
    <string name="region">Регион:</string>
    <string name="station">Станция:</string>
    <string name="about_station">Описание станции</string>
</resources>
